--- a/_notebooks/2022-01-11-graph논문.ipynb
+++ b/_notebooks/2022-01-11-graph논문.ipynb
@@ -893,6 +893,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c973cea-5e38-4ff6-b778-de208bccb6a4",
+   "metadata": {},
+   "source": [
+    "##### B. The Non-Normalized Graph Laplacian"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "65b2f1d9-cf57-4983-9ec2-c7a17e3dfa70",
    "metadata": {},
    "source": [
@@ -903,18 +911,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c973cea-5e38-4ff6-b778-de208bccb6a4",
-   "metadata": {},
-   "source": [
-    "##### B. The Non-Normalized Graph Laplacian"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0075ee59-816d-48d9-b9de-0f6f76941fb3",
    "metadata": {},
    "source": [
     "Because the graph Laplacian $Ł$ is a real symmetric matrix, it has a complete set of orthonormal eigenvectors, which we denote by {$u_l$}$_{l=0,1,...,N−1}$.$^4$ These eigenvectors have associated real, non-negative eigenvalues {$λ_l$}$_{l=0,1,...,N−1}$ satisfying $Łu_l = λ_{l}u_{l}$, for $l = 0, 1, . . . , N − 1$. Zero appears as an eigenvalue with multiplicity equal to the number of connected components of the graph [16], and thus, since we consider connected graphs, we assume the graph Laplacian eigenvalues are ordered as $0 = λ_0 < λ_1 ≤ λ_2... ≤ λ_{N−1} := λ_{max}$. We denote the entire spectrum by $σ(Ł)$ := {$λ_0, λ_1, . . . , λ_{N−1}$}."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "651c75af-8c8d-48d6-a461-7bbe2a58288f",
+   "metadata": {},
+   "source": [
+    "$^4$ - Note that there is not necessarily a unique set of graph Laplacian eigenvectors, but we assume throughout that a set of eigenvectors is chosen and fixed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b9b40c-1296-43a4-a39e-6bcc8f7e34d5",
+   "metadata": {},
+   "source": [
+    "--- "
    ]
   },
   {
@@ -949,17 +965,19 @@
   {
    "cell_type": "markdown",
    "id": "8666e90a-7f3c-4090-82f2-2bf1e84ce55c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "> note: 벡터들이 orthogonal하다=서로 수직이다. 벡터들이 orthonormal하다=서로 수직이면서 크기가 1인 단위벡터이다, 행렬이 orthogonal하다=$AA^T=E$이다=행렬을 구성하는 열벡터, 또는 행벡터들이 orthonormal하다"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "651c75af-8c8d-48d6-a461-7bbe2a58288f",
+   "id": "8a83916b-6d04-46bc-a066-0341b46c7d5b",
    "metadata": {},
    "source": [
-    "$^4$ - Note that there is not necessarily a unique set of graph Laplacian eigenvectors, but we assume throughout that a set of eigenvectors is chosen and fixed."
+    "--- "
    ]
   },
   {
@@ -990,7 +1008,7 @@
    "id": "333d1f1c-e3a6-45eb-93fb-e95ef6d0f274",
    "metadata": {},
    "source": [
-    "In classical Fourier analysis, the eigenvalues {$(2πξ)^2$}$_{ξ∈R}$ in (2) carry a specific notion of frequency: for $ξ$ close to zero (low frequencies), the associated complex exponential eigenfunctions are smooth, slowly oscillating functions, whereas for $ξ$ far from zero (high frequencies), the associated complex exponential eigenfunctions oscillate much more rapidly. In the graph setting, the graph Laplacian eigenvalues and eigenvectors provide a similar notion of frequency. For connected graphs, the Laplacian eigenvector $u_0$ associated with the eigenvalue 0 is constant and equal to $\\frac{1}{\\sqrt{N}}$ at each vertex. The graph Laplacian eigenvectors associated with low frequencies $λ_l$ vary slowly across the graph; i.e., **if two vertices are connected by an edge with a large weight, the values of the eigenvector at those locations are likely to be similar.** The eigenvectors associated with larger eigenvalues oscillate more rapidly and are more likely to have dissimilar values on vertices connected by an edge with high weight. This is demonstrated in both Figure 2, which shows different graph Laplacian eigenvectors for a random sensor network graph, and Figure 3, which shows the number $|Z_{G}(·)|$ of zero crossings of each graph Laplacian eigenvector. The set of zero crossings of a signal f on a graph G is defined as\n",
+    "In classical Fourier analysis, the eigenvalues {$(2πξ)^2$}$_{ξ∈R}$ in (2) carry a specific notion of frequency: **for $ξ$ close to zero (low frequencies), the associated complex exponential eigenfunctions are smooth, slowly oscillating functions, whereas for $ξ$ far from zero (high frequencies), the associated complex exponential eigenfunctions oscillate much more rapidly.** In the graph setting, the graph Laplacian eigenvalues and eigenvectors provide a similar notion of frequency. For connected graphs, the Laplacian eigenvector $u_0$ associated with the eigenvalue 0 is constant and equal to $\\frac{1}{\\sqrt{N}}$ at each vertex. The graph Laplacian eigenvectors associated with low frequencies $λ_l$ vary slowly across the graph; i.e., **if two vertices are connected by an edge with a large weight, the values of the eigenvector at those locations are likely to be similar.** The eigenvectors associated with larger eigenvalues oscillate more rapidly and are more likely to have dissimilar values on vertices connected by an edge with high weight. This is demonstrated in both Figure 2, which shows different graph Laplacian eigenvectors for a random sensor network graph, and Figure 3, which shows the number $|Z_{G}(·)|$ of zero crossings of each graph Laplacian eigenvector. The set of zero crossings of a signal f on a graph G is defined as\n",
     "$$Z_{G}(f) := {e = (i, j) ∈ E : f(i)f(j) < 0} ;$$\n",
     "that is, the set of edges connecting a vertex with a positive signal to a vertex with a negative signal."
    ]
@@ -1019,6 +1037,33 @@
    "source": [
     "*Fig. 3.*\n",
     "- The number of zero crossings, $|Z_G(u_l)|$ in (a) and $|Z_G(\\tilde{u}_l)|$ in (b), of the non-normalized and normalized graph Laplacian eigenvectors for the random sensor network graph of Figure 2, respectively (the latter of which is defined in Section II-F). In both cases, the Laplacian eigenvectors associated with larger eigenvalues cross zero more often, confirming the interpretation of the graph Laplacian eigenvalues as notions of frequency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9642eb44-52e9-448f-9197-ead33cc75d1c",
+   "metadata": {},
+   "source": [
+    "--- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b72bf26-6b44-4c9b-af42-41e5e44a7481",
+   "metadata": {},
+   "source": [
+    "푸리에 변환: 임의의 입력 신호를 다양한 주파수를 갖는 주기합수들의 합으로 분해하여 표현\n",
+    "- 0에 가까운 엣지(저주파)에 대해 복소수 지수 고유함수는 부드럽고 천천히 진동하는 함수지만 0과 먼 엣지(고주파)에 대해 관련된 복소수 지수 고유함수는 훨씬 빠르게 진동한다.\n",
+    "    - 푸리에 스펙트럼을 이미지로 나타내면 검은 바탕에 한 흰점만 존재\n",
+    "    - 해결하기 위해 log취함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e9461f4-d303-4521-92fd-ad1741bb28e6",
+   "metadata": {},
+   "source": [
+    "--- "
    ]
   },
   {
