--- a/_notebooks/2022-01-11-graph논문.ipynb
+++ b/_notebooks/2022-01-11-graph논문.ipynb
@@ -1010,15 +1010,7 @@
    "source": [
     "In classical Fourier analysis, the eigenvalues {$(2πξ)^2$}$_{ξ∈R}$ in (2) carry a specific notion of frequency: **for $ξ$ close to zero (low frequencies), the associated complex exponential eigenfunctions are smooth, slowly oscillating functions, whereas for $ξ$ far from zero (high frequencies), the associated complex exponential eigenfunctions oscillate much more rapidly.** In the graph setting, the graph Laplacian eigenvalues and eigenvectors provide a similar notion of frequency. For connected graphs, the Laplacian eigenvector $u_0$ associated with the eigenvalue 0 is constant and equal to $\\frac{1}{\\sqrt{N}}$ at each vertex. The graph Laplacian eigenvectors associated with low frequencies $λ_l$ vary slowly across the graph; i.e., **if two vertices are connected by an edge with a large weight, the values of the eigenvector at those locations are likely to be similar.** The eigenvectors associated with larger eigenvalues oscillate more rapidly and are more likely to have dissimilar values on vertices connected by an edge with high weight. This is demonstrated in both Figure 2, which shows different graph Laplacian eigenvectors for a random sensor network graph, and Figure 3, which shows the number $|Z_{G}(·)|$ of zero crossings of each graph Laplacian eigenvector. The set of zero crossings of a signal f on a graph G is defined as\n",
     "$$Z_{G}(f) := {e = (i, j) ∈ E : f(i)f(j) < 0} ;$$\n",
-    "that is, the set of edges connecting a vertex with a positive signal to a vertex with a negative signal."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "434f464e-30f6-4ae2-b7b5-ff3a9b73ca89",
-   "metadata": {},
-   "source": [
-    "- oscillate 진동"
+    "that is, **the set of edges connecting a vertex with a positive signal to a vertex with a negative signal.**"
    ]
   },
   {
@@ -1080,15 +1072,6 @@
    "metadata": {},
    "source": [
     "The graph Fourier transform (3) and its inverse (4) give us a way to equivalently represent a signal in two different domains: the vertex domain and the graph spectral domain. **While we often start with a signal $g$ in the vertex domain, it may also be useful to define a signal $\\hat{g}$ directly in the graph spectral domain. We refer to such signals as kernels.** In Figures 4(a) and 4(b), one such signal, a heat kernel, is shown in both domains. Analogously to the classical analog case, the graph Fourier coefficients of a smooth signal such as the one shown in Figure 4 decay rapidly. Such signals are compressible as they can be closely approximated by just a few graph Fourier coefficients (see, e.g., [24]–[26] for ways to exploit this compressibility)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47947c7f-c0b2-46a5-acc4-f05fa4b4788f",
-   "metadata": {},
-   "source": [
-    "- decay 붕괴, 부패, 감퇴\n",
-    "- compressibility 압축"
    ]
   },
   {
