--- a/_notebooks/2022-02-13-WGAN.ipynb
+++ b/_notebooks/2022-02-13-WGAN.ipynb
@@ -61,6 +61,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd9539de-e171-4d99-8e9d-cd316eda020f",
+   "metadata": {},
+   "source": [
+    "정리\n",
+    "- KL 발산과 JS 발산은 기울기 손실 때문에 제대로 학습하지 못하는 경우가 있다!\n",
+    "- 그래서 GAN 이 제안되었는데, 모델을 불안정하게 만드는 큰 기울기 변수를 가진 새로운 함수에서는 GAN 자체도 불안했다\n",
+    "- 1-립시츠함수()를 사용, 가중치 클리핑을 제한한 와서스테인 거리로 WGAN 제시\n",
+    "- 하지만 가중치 클리핑(c)을 제한하는 것은 discriminator의 가중치를 하이퍼 파라미터c가 건드는(제약하는) 일이 되어버림\n",
+    "- WGAN-GP를 제안하게 EHOA!\n",
+    "    - GAN을 WGAN-GP로 바꾸는 조건!!\n",
+    "        - critic loss 함수에 기울기 패널티 항을 포함한다.\n",
+    "        - critic의 가중치를 클리핑하지 않는다.\n",
+    "        - critic에 배치 정규화 층을 사용하지 않는다.(배치정규화는 상관관계를 만든다.)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "810a2fe3-0902-429e-b487-5cb256b423da",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e0f55c08-cda0-4249-abae-e2dc1108e54d",
    "metadata": {
     "tags": []
@@ -629,11 +654,11 @@
    "id": "7aa908f9-152c-4263-9c67-2936c514de13",
    "metadata": {},
    "source": [
-    "KL발산과 js발산\n",
+    "KL발산과 JS발산\n",
     "- P와 Q가 같을때 발산은 0이 된다. \n",
     "- q의 평균이 증가함으로써, 발산이 증가한다.\n",
     "- 즉. 생성자는 기울기 손실로부터 아무것도 배우지 못하게 된다.\n",
-    "    - 생성된 이미지가 가진 분포 q가 싱제인 p와 멀리 떨어져 있으면 아무것도 배우지 못한다."
+    "    - 생성된 이미지가 가진 분포 q가 실제 p와 멀리 떨어져 있으면 아무것도 배우지 못한다."
    ]
   },
   {
@@ -714,10 +739,14 @@
    "metadata": {},
    "source": [
     "여기서 sup은 최소값들중에 상한값, f는 1-립시츠함수!(조건:$|f(x_1)-f(x_2)| \\le |x_1 - x_2|$)\n",
-    "- 그리니까 와서스테인 거리를 계싼하기 위해서 1-립시츠함수를 찾으면 되겠지?\n",
-    "- 이걸 학습하기 위한 deep network를 구축할 수 있는데, 실제로 시그모이드 함수가 없는 discriminator D와 네트워크가 매우 유사하고ㅏ 확률보다는 스칼라 점수를 출력함.\n",
+    "- 그리니까 와서스테인 거리를 계산하기 위해서 1-립시츠함수를 찾으면 되겠지?\n",
+    "- 이걸 학습하기 위한 deep network를 구축할 수 있는데, 실제로 시그모이드 함수가 없는 discriminator D와 네트워크가 매우 유사하고 확률보다는 스칼라 점수를(EM 거라의 결과) 출력함.\n",
     "    - 이를 state(input)이 얼마나 좋은지 측정하는 가치 함수라 부를 예정~\n",
-    "- discriminator의 새로운 역할을 반영하기 위해 critic으로 이름도 변경~"
+    "- discriminator의 새로운 역할을 반영하기 위해 critic으로 이름도 변경~\n",
+    "    - discriminator는 가짜/진짜를 판별하기 위해 sigmoid를 사용하고 output은 가짜/진짜에 대한 예측 확률 값이다.\n",
+    "    - 반면 critic은 EM(Earth Mover) distance로부터 얻은 scalar값을 이용한다.\n",
+    "        - EM distance는 확률 붙포 사이의 거리를 측정하는 척도 중 하나인데, 그동안 일반적으로 사용된 척도는 KL 발산이다.\n",
+    "        - KL 발산은 매우 엄격하게 거리를 측정하는 방법이라서 연속되지 않는 경우가 있으며 학습시키기도 어렵다."
    ]
   },
   {
@@ -757,7 +786,7 @@
    "id": "344bec53-a8bc-4690-a9bc-8105122cb1a0",
    "metadata": {},
    "source": [
-    "설계한 것을 보면 CRITIC이 시그모이드 함수를 출력하지 않았다는 것만 빼고 거의 동일하다!"
+    "설계한 것을 보면 critic이 시그모이드 함수를 출력하지 않았다는 것만 빼고 거의 동일하다!"
    ]
   },
   {
@@ -909,7 +938,7 @@
    "metadata": {},
    "source": [
     "WGAN의 difficulty는 립시츠 제약을 강제로 적용하는 건데 clipping은 단순한데 약간 문제있어~\n",
-    "- 그 모델은 여전히 품질 낮은 이미지를 만들 수 있고 hyperparameter c가 올바르게 조정되지 않을때 수렴되지 않읗 수 있지!\n",
+    "- 그 모델은 여전히 품질 낮은 이미지를 만들 수 있고 hyperparameter c가 올바르게 조정되지 않을때 수렴되지 않을 수 있지!\n",
     "\n",
     "model perfomenmce는 htperparameter에 매우 민감해!!"
    ]
@@ -934,7 +963,14 @@
    "cell_type": "markdown",
    "id": "36de7e36-1512-4b66-bdd2-70145eb2bd43",
    "metadata": {},
-   "source": []
+   "source": [
+    "첫번째 줄은 WGAN\n",
+    "- capacity 가 감소되었을때 복접한 경계를 만들지 못함\n",
+    "\n",
+    "두번쨰 줄은 WGAN-GP\n",
+    "- capacity가 감소되었을때 복잡한 경계를 만듦!\n",
+    "- 가중 클리핑weightclipping 은 모델 f의 capacity를 줄이고 복잡한 함수들을 모델화하기 위한 가능성을 제약함!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -945,9 +981,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "edee7a5a-dfb1-4d4c-ae3c-d17f1a838ada",
+   "metadata": {},
+   "source": [
+    "### Wasserstein GAN with gradient penalty (WGAN-GP)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c487b97-cbc0-45f8-8a47-c704f7adc174",
+   "metadata": {},
+   "source": [
+    "WGAN-GP는 weight clipping 대신 기울기 패널티를 사용해서 립시츠 제약을 적용함\n",
+    "$$||f(x_1)-f(x_2)| \\le K|x_1 - x_2|$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15c422b8-3484-49e6-9255-d27412dd01b0",
+   "metadata": {},
+   "source": [
+    "WGAN을 WGAN-GP로 바꾸는 조건!!\n",
+    "1. critic loss 함수에 기울기 패널티 항을 포함한다.\n",
+    "2. critic의 가중치를 클리핑하지 않는다.\n",
+    "3. critic에 배치 정규화 층을 사용하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecfb926d-0c15-4ebd-84c6-8e3e484140ef",
+   "metadata": {},
+   "source": [
+    "$\\star$ 배치 정규화\n",
+    "- 배치 정규화는 같은 **배치 안의 이미지 사이에 상관관계를 만들기 때문에** 기울기 패널티 손실의 효과가 떨어진다. 실험을 해보면 critic에서 배치 정규화를 사용하지 않더라도 WGAN-GP이 여전히 훌률한 결과를 만든다는 것을 알 수 있다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4251b67f-fcb7-49c2-82be-35520bd3b39e",
+   "metadata": {},
+   "source": [
+    "#### Gradient penalty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ab3bf7d-8903-4fb3-93fc-b8e1f2c12bcc",
+   "metadata": {},
+   "source": [
+    "- 입력 이미지에 대한 예측의 기울기 norm과 1 사이의 차이를 제곱한 것\n",
+    "- 이 모델은 자연스럽게 기울기 패널티 항을 최소화하는 가중치를 찾으려고 하고 이는 립시츠 제약을 따르도록 만듦\n",
+    "- 학습 과정의 모든 곳에서 기울기를 계산하는 것은 힘들다. 개신 WGAN-GP는 일부 지점만 기울기를 계산한다.\n",
+    "- 한쪽으로 치우치지 않기 위해 진짜 이미지와 가짜 이미지 쌍을 연결한 직선을 따라 무작위로 포인트를 선택해 보간interpolation 이미지들을 사용한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ab60ef4-46d3-465e-b6d8-499dd1e31a56",
+   "metadata": {},
+   "source": [
+    "### Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7994fcee-5b22-4e45-9fd8-2e0526060e7d",
+   "metadata": {},
+   "source": [
+    "![](https://miro.medium.com/max/1400/1*yYvwVzRnlVmRFCh7-JOASw.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ebde5aa-25cd-4ec0-9de7-73710b778665",
+   "id": "9268303d-128e-4317-8f36-fa7f62de017b",
    "metadata": {},
    "outputs": [],
    "source": []
