--- a/_notebooks/2022-02-13-WGAN.ipynb
+++ b/_notebooks/2022-02-13-WGAN.ipynb
@@ -68,6 +68,7 @@
     "- KL 발산과 JS 발산은 기울기 손실 때문에 제대로 학습하지 못하는 경우가 있다!\n",
     "- 그래서 GAN 이 제안되었는데, 모델을 불안정하게 만드는 큰 기울기 변수를 가진 새로운 함수에서는 GAN 자체도 불안했다\n",
     "- 1-립시츠함수()를 사용, 가중치 클리핑을 제한한 와서스테인 거리로 WGAN 제시\n",
+    "    - discriminator 식을 EM 거리(와서스테인거리)를 이용하여 변형함으로써 기울기가 잘 흘러가도록 해서 GAN이 실제 최적화 지점에 도달하는 것을 도왔고, GAN 학습 안정화 및 모드 붕괴 문제도 헤결할 수 있었음\n",
     "- 하지만 가중치 클리핑(c)을 제한하는 것은 discriminator의 가중치를 하이퍼 파라미터c가 건드는(제약하는) 일이 되어버림\n",
     "- WGAN-GP를 제안하게 EHOA!\n",
     "    - GAN을 WGAN-GP로 바꾸는 조건!!\n",
@@ -122,6 +123,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d898069-3a32-4bc8-ab3e-bf604f0d737e",
+   "metadata": {},
+   "source": [
+    "$\\star$ mode 쉽게 말하면 분포 내에서 최빈값"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4097040-3401-46a6-9ee4-76c4ac51a36e",
    "metadata": {},
    "source": [
@@ -153,6 +162,23 @@
     "- Let $P_0$ be the distribution of $(0, Z) ∈ R^2$ (a 0 on the x-axis and the random variable Z on the y-axis), uniform on a straight vertical line passing through the origin.\n",
     "- Now let $g_θ(z) = (θ, z)$ with $θ$ a single real parameter. \n",
     "- It is easy to see that in this case,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c203107-5249-449c-a8a8-244dfcb6c74d",
+   "metadata": {},
+   "source": [
+    "![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fb9zZja%2Fbtqu13zUEKO%2FGdnlWnoWSmkk9G0CSZgqx0%2Fimg.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "485c78f2-7a11-4db5-abb4-256337600ef1",
+   "metadata": {},
+   "source": [
+    "위에서 볼 수 있듯이 와서스테인 거리의 경우에만 세타에 상관없이 일정한 수식을 가지고 있지??\n",
+    "- 그래서 다른 거리나 발산 공식들에 비해 학습이 수월할거야!"
    ]
   },
   {
@@ -249,6 +275,7 @@
     "    - g가 세타에 대해 연속이면 EM 거리도 연속!\n",
     "2. If $g$ is locally Lipschitz and satisfies regularity assumption 1, then $W(P_r, P_θ)$ is continuous everywhere, and differentiable almost everywhere.\n",
     "    - g가 립시츠 조건 만족한다면  EM 거리도 연속!\n",
+    "        - 립시츠 거리: 두 점 사이의 거리를 일정 비 이상으로 증가시키지 않는 함수!\n",
     "3. Statements 1-2 are false for the Jensen-Shannon divergence $JS(P_r, P_θ)$ and all the KLs."
    ]
   },
@@ -336,6 +363,14 @@
     "        - $X_n$의 모든 모멘트가 $X$의 모멘트로 수렴하면 분포수렴\n",
     "        - $X_n$의 누적확률밀도함수가 $X$의 누적확률밀도함수 중 연속인 모든 점에서 수렴하면 분포수렴\n",
     "        - $X_n$의 푸리에 변환Fourier transform이 수렴하면 분포수렴"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "390a7352-d235-4ee3-81a5-0356f621916a",
+   "metadata": {},
+   "source": [
+    "$\\star$ 립시츠 조건을 만족하기 위해서 아래 계속 clipping 할 예정~"
    ]
   },
   {
@@ -516,8 +551,19 @@
     "\n",
     "**We identified momentum as a potential cause because, as the loss blew up and samples got worse, the cosine between the Adam step and the gradient usually turned negative. The only places where this cosine was negative was in these situations of instability.** \n",
     "- Adam 안 쓴 이유\n",
+    "- 실험 결과 critic을 학슿할때 Adam과 같은 momentum base optimizer를 사용하면 학습이 불안정함!!\n",
+    "    - loss값이 튀고 샘플이 좋지 않은 경우(일반적으로 학습 초반) Adam이 가고자 하는 방향, 즉 이전에 기억했던 방향(Adam step)과 기울기 방향 간의 cosine 값이 음수가 된다는 것이다.\n",
+    "    - 일반적으로 nonstationary 문제(극한값이 존재하지 않음)에 대해서는 momentum 계열보다 RMSProp 이 성능이 더 좋다고 한다.(여기서 정의한 문제도 nonstationary problem)\n",
     "\n",
     "We therefore switched to RMSProp [21] which is known to perform well even on very nonstationary problems [13]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ea90712-7265-4266-94fd-be5013fa3baa",
+   "metadata": {},
+   "source": [
+    "$\\star$ **discriminator 의 경우 일반적인 분류 신경망과 같이 이미지가 진짜인지 가짜인지 시그모이드 확률값으로 판별해낸다. 하지만 critic의 경우 와서스테인GAN 식 자체를 사용하기 때문에 scalar값이 출력된다. 이는 이미지가 진짜인지 가짜인지에 대한 점수를 의미하는 것이므로 시그모이드와 달리 saturation 현상은 없고 좋은 기울기만 만들어내게 된다.**"
    ]
   },
   {
@@ -941,6 +987,15 @@
     "- 그 모델은 여전히 품질 낮은 이미지를 만들 수 있고 hyperparameter c가 올바르게 조정되지 않을때 수렴되지 않을 수 있지!\n",
     "\n",
     "model perfomenmce는 htperparameter에 매우 민감해!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4d0603a-23b4-45b7-8e59-ba26cae21a49",
+   "metadata": {},
+   "source": [
+    "- 문제1. clipping parameter c가 크면 limit(-c,c)에 도달하는 시간이 오래걸리기 때문에 최적화 지점까지 학습하는데 시간이 오래걸리고, c가 작으면 기울기 소실 문제가 발생해버린다!\n",
+    "- 문제2. regularizer로 작용해서 함수 f의 capacity도 줄인다!"
    ]
   },
   {
