--- a/_notebooks/2022-02-15-[논문연구]_ft.교수님.ipynb
+++ b/_notebooks/2022-02-15-[논문연구]_ft.교수님.ipynb
@@ -80,7 +80,7 @@
     "id": "9ce27d1b-916a-4b73-ad8e-0efca0083df5"
    },
    "source": [
-    "`-` 웨이블릿과 퓨리에변환등으로 $f(x)$를 추론하는 것이 대표적인 세미파라메트릭 모델링이다."
+    "`-` 웨이블릿과 퓨리에변환등으로 $f(x)$를 추론하는 것이 대표적인 세미파라메트릭 모델링semi-parametric modeling이다."
    ]
   },
   {
