--- a/_notebooks/2022-01-31-Instance Selection for GANs.ipynb
+++ b/_notebooks/2022-01-31-Instance Selection for GANs.ipynb
@@ -12,7 +12,8 @@
     "- branch: master\n",
     "- badges: true\n",
     "- comments: false\n",
-    "- author: 최서연"
+    "- author: 최서연\n",
+    "- categories: [논문리뷰]"
    ]
   },
   {
@@ -539,7 +540,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
