--- a/_notebooks/2022-02-02-Data-Efficient GAN.ipynb
+++ b/_notebooks/2022-02-02-Data-Efficient GAN.ipynb
@@ -16,7 +16,7 @@
     "- badges: false\n",
     "- comments: false \n",
     "- author: 최서연\n",
-    "- categories: [GAN]"
+    "- categories: [GAN, 논문리뷰]"
    ]
   },
   {
@@ -730,7 +730,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
