--- a/_notebooks/2022-02-16-WGAN.ipynb
+++ b/_notebooks/2022-02-16-WGAN.ipynb
@@ -16,7 +16,7 @@
     "- badges: false\n",
     "- comments: false \n",
     "- author: 최서연\n",
-    "- categories: [Wasserstein GAN, GAN]"
+    "- categories: [Wasserstein GAN, GAN, 논문리뷰]"
    ]
   },
   {
