--- a/_notebooks/2022-02-17-WGAN.ipynb
+++ b/_notebooks/2022-02-17-WGAN.ipynb
@@ -700,8 +700,7 @@
    "metadata": {},
    "source": [
     "- $Π(P_r, P_g)$ denotes the set of all joint distributions $γ(x, y)$ whose marginals are respectively $P_r$ and $P_g$.\n",
-    "    - 결합확률분포 $Π(P_r, P_g)$ 중에서 maginal이 각각 pr,pg인 모든 결합 분포 $γ(x, y)$ 의 집합\n",
-    "        - (질문)"
+    "    - 결합확률분포 $Π(P_r, P_g)$ 중에서 maginal이 각각 pr,pg인 모든 결합 분포 $γ(x, y)$ 의 집합"
    ]
   },
   {
