--- a/_notebooks/2022-02-16-[논문연구]_ft.교수님.ipynb
+++ b/_notebooks/2022-02-16-[논문연구]_ft.교수님.ipynb
@@ -16,7 +16,7 @@
     "- comments: false\n",
     "- author: 신록예찬, 최서연\n",
     "- hide: false\n",
-    "- categories: [논문연구]"
+    "- categories: [논문연구, 모델링, 푸리에 변환, PCA, 라플라시안]"
    ]
   },
   {
