--- a/_notebooks/2022-02-17-WGAN.ipynb
+++ b/_notebooks/2022-02-17-WGAN.ipynb
@@ -811,6 +811,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d78a1f4-6fbc-43e4-b441-0e3b9848eb40",
+   "metadata": {},
+   "source": [
+    "- 위와 같이 거리를 구해본 후 그 중 가장 작은 값을 pick하는 것이 와서스테인 거리이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c1be67e-2a42-4eec-8a56-c73f6f8bc8a8",
    "metadata": {},
    "source": [
