--- a/_notebooks/2022-02-17-graph논문.ipynb
+++ b/_notebooks/2022-02-17-graph논문.ipynb
@@ -21,14 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "f4cbc022-5d75-4201-9427-46a79ed76844",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import folium"
+    "import pandas as pd"
    ]
   },
   {
@@ -237,8 +236,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f84321f-996f-46c3-aa6f-70707590ca42",
+   "metadata": {},
+   "source": [
+    "- t = Year\n",
+    "- x = Latitude\n",
+    "- y = Longitude\n",
+    "- f = Magnitude"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "0910e5ea-6e0e-49d2-893b-fc04a47df73c",
    "metadata": {},
    "outputs": [
@@ -263,7 +273,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Magnitude</th>\n",
@@ -272,44 +281,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7347</th>\n",
-       "      <td>01/02/1985</td>\n",
-       "      <td>55.4280</td>\n",
-       "      <td>-157.8350</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1985</td>\n",
+       "      <th>0</th>\n",
+       "      <td>12.4240</td>\n",
+       "      <td>141.9490</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7348</th>\n",
-       "      <td>01/02/1985</td>\n",
-       "      <td>-14.6580</td>\n",
-       "      <td>-175.3530</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>1985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7349</th>\n",
-       "      <td>01/03/1985</td>\n",
-       "      <td>-21.6160</td>\n",
-       "      <td>-174.1100</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>1985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7350</th>\n",
-       "      <td>01/04/1985</td>\n",
-       "      <td>-26.0570</td>\n",
-       "      <td>-177.5180</td>\n",
+       "      <th>1</th>\n",
+       "      <td>-5.2970</td>\n",
+       "      <td>145.8590</td>\n",
        "      <td>5.8</td>\n",
-       "      <td>1985</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7351</th>\n",
-       "      <td>01/05/1985</td>\n",
-       "      <td>-0.6660</td>\n",
-       "      <td>67.2900</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>1985</td>\n",
+       "      <th>2</th>\n",
+       "      <td>-8.8020</td>\n",
+       "      <td>-77.7180</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-8.7260</td>\n",
+       "      <td>157.4870</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-8.7830</td>\n",
+       "      <td>157.3540</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -317,43 +321,37 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23407</th>\n",
-       "      <td>12/28/2016</td>\n",
+       "      <th>3569</th>\n",
        "      <td>38.3917</td>\n",
        "      <td>-118.8941</td>\n",
        "      <td>5.6</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23408</th>\n",
-       "      <td>12/28/2016</td>\n",
+       "      <th>3570</th>\n",
        "      <td>38.3777</td>\n",
        "      <td>-118.8957</td>\n",
        "      <td>5.5</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23409</th>\n",
-       "      <td>12/28/2016</td>\n",
+       "      <th>3571</th>\n",
        "      <td>36.9179</td>\n",
        "      <td>140.4262</td>\n",
        "      <td>5.9</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23410</th>\n",
-       "      <td>12/29/2016</td>\n",
+       "      <th>3572</th>\n",
        "      <td>-9.0283</td>\n",
        "      <td>118.6639</td>\n",
        "      <td>6.3</td>\n",
        "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23411</th>\n",
-       "      <td>12/30/2016</td>\n",
+       "      <th>3573</th>\n",
        "      <td>37.3973</td>\n",
        "      <td>141.4103</td>\n",
        "      <td>5.5</td>\n",
@@ -361,42 +359,66 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>16065 rows × 5 columns</p>\n",
+       "<p>3574 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Date  Latitude  Longitude  Magnitude  Year\n",
-       "7347   01/02/1985   55.4280  -157.8350        6.0  1985\n",
-       "7348   01/02/1985  -14.6580  -175.3530        5.7  1985\n",
-       "7349   01/03/1985  -21.6160  -174.1100        5.6  1985\n",
-       "7350   01/04/1985  -26.0570  -177.5180        5.8  1985\n",
-       "7351   01/05/1985   -0.6660    67.2900        5.6  1985\n",
-       "...           ...       ...        ...        ...   ...\n",
-       "23407  12/28/2016   38.3917  -118.8941        5.6  2016\n",
-       "23408  12/28/2016   38.3777  -118.8957        5.5  2016\n",
-       "23409  12/28/2016   36.9179   140.4262        5.9  2016\n",
-       "23410  12/29/2016   -9.0283   118.6639        6.3  2016\n",
-       "23411  12/30/2016   37.3973   141.4103        5.5  2016\n",
+       "      Latitude  Longitude  Magnitude  Year\n",
+       "0      12.4240   141.9490        6.1  2010\n",
+       "1      -5.2970   145.8590        5.8  2010\n",
+       "2      -8.8020   -77.7180        5.7  2010\n",
+       "3      -8.7260   157.4870        6.6  2010\n",
+       "4      -8.7830   157.3540        7.1  2010\n",
+       "...        ...        ...        ...   ...\n",
+       "3569   38.3917  -118.8941        5.6  2016\n",
+       "3570   38.3777  -118.8957        5.5  2016\n",
+       "3571   36.9179   140.4262        5.9  2016\n",
+       "3572   -9.0283   118.6639        6.3  2016\n",
+       "3573   37.3973   141.4103        5.5  2016\n",
        "\n",
-       "[16065 rows x 5 columns]"
+       "[3574 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year>=\"1985\"')"
+    "_df = df.assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year>=\"2010\"').reset_index().iloc[:,2:]\n",
+    "_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "54203de1-8bf6-48cd-b49b-c3d7a9463351",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.910000000000025"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.abs(_df.Longitude[0]-_df.Longitude[1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7081ddf-16d0-4778-80a6-9b72aa7b336f",
+   "id": "6ca6bf2b-4a4b-4d29-a28d-ea183a37fc3c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dist()"
+   ]
   }
  ],
  "metadata": {
