--- a/_notebooks/2022-02-16-[논문연구]_ft.교수님.ipynb
+++ b/_notebooks/2022-02-16-[논문연구]_ft.교수님.ipynb
@@ -1408,35 +1408,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 96,
    "id": "223aaa7c-f8ad-45d0-a569-3ac018890a0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3.55240664e-02,  7.09342544e-02,  1.06117206e-01, ...,\n",
-       "         1.31643824e-02, -1.61668873e-02,  1.96232421e-02],\n",
-       "       [-1.06537141e-01, -2.12522818e-01, -3.17409715e-01, ...,\n",
-       "         9.06572894e-03, -1.05757496e-02,  1.21278306e-02],\n",
-       "       [ 1.77445077e-01,  3.53272651e-01,  5.25884872e-01, ...,\n",
-       "         2.14451385e-03, -1.32710675e-03, -1.32986675e-17],\n",
+       "array([[ 1.00000000e+00, -1.00000000e+00, -1.77388390e-15, ...,\n",
+       "        -1.29097491e-15,  9.74047232e-16, -1.70002901e-16],\n",
+       "       [-1.00000000e+00,  2.00000000e+00, -1.00000000e+00, ...,\n",
+       "         2.27039250e-15, -1.30581310e-15,  8.49147141e-16],\n",
+       "       [-1.70471180e-15, -1.00000000e+00,  2.00000000e+00, ...,\n",
+       "        -2.99733112e-15,  1.22474800e-15, -6.85887016e-16],\n",
        "       ...,\n",
-       "       [-1.77445077e-01,  3.53272651e-01, -5.25884872e-01, ...,\n",
-       "         2.14451385e-03,  1.32710675e-03,  2.15095051e-17],\n",
-       "       [ 1.06537141e-01, -2.12522818e-01,  3.17409715e-01, ...,\n",
-       "         9.06572894e-03,  1.05757496e-02,  1.21278306e-02],\n",
-       "       [-3.55240664e-02,  7.09342544e-02, -1.06117206e-01, ...,\n",
-       "         1.31643824e-02,  1.61668873e-02,  1.96232421e-02]])"
+       "       [-1.30604532e-15,  2.27884927e-15, -3.05349279e-15, ...,\n",
+       "         2.00000000e+00, -1.00000000e+00, -9.05895822e-15],\n",
+       "       [ 9.68843061e-16, -1.32446137e-15,  1.24372153e-15, ...,\n",
+       "        -1.00000000e+00,  2.00000000e+00, -1.00000000e+00],\n",
+       "       [-1.70002901e-16,  8.43942971e-16, -6.87947000e-16, ...,\n",
+       "        -9.04030994e-15, -1.00000000e+00,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Ψ@Λ@Λ.T"
+    "Ψ@Λ@Ψ.T"
    ]
   },
   {
