--- a/_notebooks/2022-02-25-Eartquake.ipynb
+++ b/_notebooks/2022-02-25-Eartquake.ipynb
@@ -1318,6 +1318,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 335,
+   "id": "55384bdc-6696-486b-8f1a-89aca79df19f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.87851809, 5.87851809, 5.87851809, ..., 5.87851809, 5.87851809,\n",
+       "       5.87851809])"
+      ]
+     },
+     "execution_count": 335,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f @ np.outer(Ψ[:,123], Ψ[:,123])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 313,
    "id": "90cbbc0f-a1ef-43b3-ad8c-72e3860a21ae",
    "metadata": {
