--- a/_notebooks/2022-03-02-Earthquake-real.ipynb
+++ b/_notebooks/2022-03-02-Earthquake-real.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "f4cbc022-5d75-4201-9427-46a79ed76844",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "44c98ac3-3d11-4593-b2b8-39c50d9d6e4f",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "7615901c-2423-4d3d-aec2-0d1e2c2861c2",
    "metadata": {
     "id": "98831339-6197-4662-beee-24c51eb3ada2",
@@ -79,157 +79,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "0910e5ea-6e0e-49d2-893b-fc04a47df73c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Magnitude</th>\n",
-       "      <th>Year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01/01/2000</td>\n",
-       "      <td>-60.7220</td>\n",
-       "      <td>153.6700</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01/02/2000</td>\n",
-       "      <td>-17.9430</td>\n",
-       "      <td>-178.4760</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01/02/2000</td>\n",
-       "      <td>51.4470</td>\n",
-       "      <td>-175.5580</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01/02/2000</td>\n",
-       "      <td>-20.7710</td>\n",
-       "      <td>-174.2360</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01/05/2000</td>\n",
-       "      <td>-20.9640</td>\n",
-       "      <td>-174.0970</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8739</th>\n",
-       "      <td>12/28/2016</td>\n",
-       "      <td>38.3917</td>\n",
-       "      <td>-118.8941</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8740</th>\n",
-       "      <td>12/28/2016</td>\n",
-       "      <td>38.3777</td>\n",
-       "      <td>-118.8957</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8741</th>\n",
-       "      <td>12/28/2016</td>\n",
-       "      <td>36.9179</td>\n",
-       "      <td>140.4262</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8742</th>\n",
-       "      <td>12/29/2016</td>\n",
-       "      <td>-9.0283</td>\n",
-       "      <td>118.6639</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8743</th>\n",
-       "      <td>12/30/2016</td>\n",
-       "      <td>37.3973</td>\n",
-       "      <td>141.4103</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2016</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8744 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Date  Latitude  Longitude  Magnitude  Year\n",
-       "0     01/01/2000  -60.7220   153.6700        6.0  2000\n",
-       "1     01/02/2000  -17.9430  -178.4760        5.5  2000\n",
-       "2     01/02/2000   51.4470  -175.5580        5.8  2000\n",
-       "3     01/02/2000  -20.7710  -174.2360        5.8  2000\n",
-       "4     01/05/2000  -20.9640  -174.0970        5.6  2000\n",
-       "...          ...       ...        ...        ...   ...\n",
-       "8739  12/28/2016   38.3917  -118.8941        5.6  2016\n",
-       "8740  12/28/2016   38.3777  -118.8957        5.5  2016\n",
-       "8741  12/28/2016   36.9179   140.4262        5.9  2016\n",
-       "8742  12/29/2016   -9.0283   118.6639        6.3  2016\n",
-       "8743  12/30/2016   37.3973   141.4103        5.5  2016\n",
-       "\n",
-       "[8744 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8744 entries, 0 to 8743\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   Date       8744 non-null   object \n",
+      " 1   Latitude   8744 non-null   float64\n",
+      " 2   Longitude  8744 non-null   float64\n",
+      " 3   Magnitude  8744 non-null   float64\n",
+      " 4   Year       8744 non-null   object \n",
+      "dtypes: float64(3), object(2)\n",
+      "memory usage: 341.7+ KB\n"
+     ]
     }
    ],
    "source": [
     "_df = df.assign(Year=list(map(lambda x: x.split('/')[-1], df.Date))).query('Year>=\"2000\"').reset_index().iloc[:,1:]\n",
-    "_df"
+    "_df.info()"
    ]
   },
   {
