--- a/_notebooks/2022-03-04-Earthquake-real.ipynb
+++ b/_notebooks/2022-03-04-Earthquake-real.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 151,
    "id": "f4cbc022-5d75-4201-9427-46a79ed76844",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
    "id": "4f185c78-ba52-4910-828b-c6e256491127",
    "metadata": {},
    "source": [
-    "##### 3. $(x_i,y_i)$와 $(x_j,y_j)$ 사이의 유클리드 거리 정의\n",
+    "##### 3. 비유클리드 공간에서의 거리 정의\n",
     "- $x$ = Latitude, 위도로 정의\n",
     "- $y$ = Longitude, 경도로 정의\n",
     "- 지진의 영향이 주변에만 끼치는 것을 고려하여 경도, 위도의 차이가 90도 이내인 경우만 거리 계산"
@@ -363,7 +363,7 @@
    "id": "6df9996b-e928-4e94-b6d6-283f21d2454b",
    "metadata": {},
    "source": [
-    "##### 4. 거리를 이용한 $W_{i,j}$ 행렬 정의\n",
+    "##### 4. 거리를 이용한 가중치 $W_{i,j}$ 행렬 정의\n",
     "- a weighted adjacency matrix $W$\n",
     "- 동일한 지점 상의 거리는 0이 되어 $W_{i,j}$가 1이 될 것이다(대각행렬은 모두 1)\n",
     "- 연결강도로 생각"
@@ -441,7 +441,7 @@
    "id": "52cdb8c1-33d4-46c7-8c2e-0c25b825b245",
    "metadata": {},
    "source": [
-    "그래프"
+    "그래프(임의보행 random walk)"
    ]
   },
   {
