--- a/_notebooks/2022-03-09-bds_1주차.ipynb
+++ b/_notebooks/2022-03-09-bds_1주차.ipynb
@@ -1152,7 +1152,23 @@
    "source": [
     "[4] $\\frac{\\partial}{\\partial y} \\bf{y}^\\top \\bf{y} = 2\\bf{y}$\n",
     " \n",
-    "pf. $\\bf{y}^\\top \\bf{y} = \\brgon{bmatrix} y_1 & \\dots & y_n \\end{bmatrix} \\begin{bmatrix} y_1 \\\\ \\vdots \\\\ y_n \\end{bmatrix} = $"
+    "pf. $\\bf{y}^\\top \\bf{y} = \\begin{bmatrix} y_1 & \\dots & y_n \\end{bmatrix} \\begin{bmatrix} y_1 \\\\ \\vdots \\\\ y_n \\end{bmatrix} = y_{1}^{2} + \\dots + y_{n}^{2}$\n",
+    "\n",
+    "$\\therefore \\frac{\\partial}{\\partial y}(\\bf{y}^\\top y) = \\frac{\\partial}{\\partial y}(y_{1}^{2} + \\dots + y_{n}^{2}) = \\begin{bmatrix} \\frac{\\partial}{\\partial y_1} \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial y_n} \\end{bmatrix} (y_{1}^{2} + \\dots + y_{n}^{2})$\n",
+    "\n",
+    "$ = \\begin{bmatrix} \\frac{\\partial}{\\partial y_1}(y_{1}^{2} + \\dots + y_{n}^{2}) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial y_n}(y_{1}^{2} + \\dots + y_{n}^{2}) \\end{bmatrix}$\n",
+    "\n",
+    "$ = \\begin{bmatrix}2y_1 + 0 + \\dots + 0 \\\\ 0 + 2y_2 + \\dots + 0 \\\\ \\vdots \\\\ 0 + 0 + \\dots + 2y_n \\end{bmatrix} = 2\\begin{bmatrix} y_1 \\\\ \\vdots \\\\ y_n \\end{bmatrix} = 2\\bf{y}$\n",
+    "\n",
+    "(틀린 풀이) $\\frac{\\partial}{\\partial y}(\\bf{y}^\\top \\bf{y}) = \\big( \\frac{\\partial}{\\partial y} \\bf{y}^\\top \\big) \\bf{y}$\n",
+    "\n",
+    "그런데 $\\big(\\frac{\\partial}{\\partial y}\\bf{y}^\\top \\big) = \\bf{I}$이므로, $\\frac{\\partial}{\\partial y} (\\bf{y}^\\top \\bf{y}) = \\bf{I} \\bf{y} = \\bf{y}$\n",
+    "\n",
+    "(틀린 풀이의 스칼라 버전) $\\frac{d}{dy} y^2 = \\big( \\frac{d}{dy} y \\big) \\bf{y} = 1 \\times \\bf{y} = \\bf{y}$\n",
+    "\n",
+    "(올바른 풀이) : $\\frac{d}{dy} y^2 = \\big( \\frac{d}{dy} \\big) \\bf{yy} = \\big( \\frac{d}{dy} y \\big) y + y \\big( \\frac{d}{dy} y\\big)$\n",
+    "\n",
+    "Note: 곱의 미분 : 함수 $f(x), g(x)$ 가 $x$에 대하여 미분 가능하면 $\\{ f(x) \\times g(x) \\}$"
    ]
   },
   {
