--- a/_notebooks/2022-03-09-bds_1주차.ipynb
+++ b/_notebooks/2022-03-09-bds_1주차.ipynb
@@ -16,6 +16,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5761ae30-a12b-4d47-b2e7-d3b531704923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cadc45f4-600c-41fe-82bb-2fed5e46142d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.config.list_physical_devices('GPU')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "34c967bd-cce8-4164-8908-5c4b6c23b60e",
    "metadata": {},
@@ -1519,7 +1550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
