--- a/_notebooks/2022-03-11-Earthquake-real.ipynb
+++ b/_notebooks/2022-03-11-Earthquake-real.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 804,
+   "execution_count": 1248,
    "id": "7615901c-2423-4d3d-aec2-0d1e2c2861c2",
    "metadata": {
     "id": "98831339-6197-4662-beee-24c51eb3ada2",
@@ -409,6 +409,14 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c6e32e1-96e4-4efe-87c3-b24582a58fa3",
+   "metadata": {},
+   "source": [
+    "![](https://wikimedia.org/api/rest_v1/media/math/render/svg/8390236068c8e84f9fea2729c76a21ec3574a7db)"
    ]
   },
   {
@@ -2229,7 +2237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9dd6224-fd02-4c83-9d42-52fa480025f8",
+   "id": "67b1cde2-31e8-4ec1-9284-8b0fe6d29297",
    "metadata": {},
    "outputs": [],
    "source": []
