--- a/_notebooks/2022-03-11-GDL.ipynb
+++ b/_notebooks/2022-03-11-GDL.ipynb
@@ -342,9 +342,207 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ccfc0e2-1631-4e3a-93d2-774f3b78c89c",
+   "metadata": {},
+   "source": [
+    "- Stationarity and stability to local translations are both leveraged in convolutional neural networks \n",
+    "\n",
+    "\n",
+    "- The model is said to be deep if it comprises multiple layers, though this notion is rather vague and one can find  examples of CNNs with as few as a couple and as many as hundreds of layers [11].\n",
+    "    - 다층으로 구성되면 깊다고는 하는데 이 개념은 오히려 모호하고 구 개 혹은 수백개 층으로 CNN의 예를 찾을 수 있음\n",
+    "- The output features enjoy translation invariance/covariance depending on whether spatial resolution is progressively lost by means of pooling or kept fixed.\n",
+    "    - 출력 특징으로는 공간 해상도가 풀링에 의해 점진적으로 손실되는지 고정을 유지하는지에 따라 변형 불변성(위치 변해도 결과 나옴) 및 공변성을 가진다는 것.\n",
+    "- Moreover, if one specifies the convolutional tensors to be complex wavelet decomposition operators and uses complex modulus as pointwise nonlinearities, one can provably obtain stability to local deformations [17].\n",
+    "- Although this stability is not rigorously proved for generic compactly supported convolutional tensors, it underpins the empirical success of CNN architectures across a variety of computer vision applications [1]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45735fb2-3f12-464b-bf1a-15acf3e9ba95",
+   "metadata": {},
+   "source": [
+    "- A key advantage of CNNs explaining their success in numerous tasks is that the geometric priors on which CNNs are based result in a learning complexity that avoids the curse of dimensionality.\n",
+    "    - 수많은 연구에서 성공을 설명하는 CNN의 주요 장점은 CNN이 기반으로 하는 기하학적 prior가 차원의 curse를 피하는 학습 복잡성의 결과를 초래한다는 것.\n",
+    "- Thanks to the stationarity and local deformation priors, the linear operators at each layer have a constant number of parameters, independent of the input size n (number of pixels in an image). \n",
+    "    - stationarity와 국소적 분해 prior 덕분에 선형 연산자는 출력 크기 n에 독립적으로(상관없이) 각 층에서 매개변수의 일정한 수를 가짐 \n",
+    "- Moreover, thanks to the multiscale hierarchical property, the number of layers grows at a rate $\\cal{O}(log n)$, resulting in a total learning complexity of $\\cal{O}(log n)$ parameters.\n",
+    "    - 다중 스케일 계층적 특징 덕분에 수많은 층은 $\\cal{O}(log n)$ 비율로 증가하고, $\\cal{O}(log n)$ 매개변수의 전체 학습 복접성을 초래함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5284f628-79e3-4e63-bd6c-913c14c17819",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### IV. THE GEOMETRY OF MANIFOLDS AND GRAPHS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "711839ad-7a32-49cc-bf1c-11c0e9483a1d",
+   "metadata": {},
+   "source": [
+    "**Manifolds**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc234b6c-1993-4068-8e01-8efda9b6663d",
+   "metadata": {},
+   "source": [
+    "- a manifold is a space that is locally Euclidean.\n",
+    "- Formally speaking, a (differentiable) d-dimensional manifold $\\cal{X}$ is a topological space where each point $x$ has a neighborhood that is topologically equivalent (homeomorphic) to a d-dimensional Euclidean space, called the tangent space and denoted by $T_x \\cal{X}$.\n",
+    "- The collection of tangent spaces at all points (more formally, their disjoint union) is referred to as the tangent bundle and denoted by $T \\cal{X}$. \n",
+    "- On each tangent space, we define an inner product $<\\bullet,\\bullet>_{T_x \\cal{X}} : T_x \\cal{X} \\times T_ \\cal{x}X \\rightarrow \\mathbb{R}$, which is additionally assumed to depend smoothly on the position x.\n",
+    "- This inner product is called a Riemannian metric in differential geometry and allows performing local measurements of angles, distances, and volumes. \n",
+    "- A manifold equipped with a metric is called a Riemannian manifold."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1f5df52-f1f8-43f9-a5e7-459aaeb40f0f",
+   "metadata": {},
+   "source": [
+    "리만 다양체: 각 점의 접공간 위에 양의 정부호 쌍선형 형식이 주어져, 두 점 사이의 거리를 측정할 수 있는 매끄러운 다양체이다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bf0dcd7-cb8a-450b-b79d-dff6f7505eec",
+   "metadata": {},
+   "source": [
+    "- The celebrated Nash Embedding Theorem guarantees that any sufficiently smooth Riemannian manifold can be realized in a Euclidean space of sufficiently high dimension [67]. \n",
+    "- An embedding is not necessarily unique; two different realizations of a Riemannian metric are called isometries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91e8c08c-049a-49c5-a037-92e56be5b907",
+   "metadata": {},
+   "source": [
+    "![](https://d3i71xaburhd42.cloudfront.net/0e779fd59353a7f1f5b559b9d65fa4bfe367890c/6-Figure1-1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b5443f1-5664-4b7e-9656-f78584083d13",
+   "metadata": {},
+   "source": [
+    "- Isometries do not affect the metric structure of themanifold and consequently, preserve any quantities that can be expressed in terms of the Riemannian metric (called intrinsic).\n",
+    "- Conversely, properties related to the specific realization of the manifold in the Euclidean space are called extrinsic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e83211b2-c9c8-4b2d-a3e3-f1b5c2634fb2",
+   "metadata": {},
+   "source": [
+    "**Calculus on manifolds**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8152c8a-a367-4a76-b711-7371111b5c2d",
+   "metadata": {},
+   "source": [
+    "- 우리가 관심있는 두 가지\n",
+    "    - A scalar field is a smooth real function $f : \\cal{X} \\rightarrow \\mathbb{R}$ on the manifold.\n",
+    "    - A tangent vector field $F : \\cal{X} \\rightarrow T\\cal{X}$ is a mapping attaching a tangent vector $F(x) \\in T_x \\cal{X}$ to each point $x$.\n",
+    "- We define the Hilbert spaces of scalar and vector fields on manifolds, denoted by $L^2(\\cal{X})$ and $L^2(T \\cal{X})$, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23289a14-01f1-4ffd-bbf7-7717412d7e7c",
+   "metadata": {},
+   "source": [
+    "- One of the big differences distinguishing classical calculus from differential geometry is a lack of vector space structure on the manifold, prohibiting us from na¨ıvely using expressions like $f(x+dx)$.\n",
+    "- The conceptual leap that is required to generalize such notions to manifolds is the need to work locally in the tangent space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a72f6b7-78b5-49a0-9db5-e346a623a60a",
+   "metadata": {},
+   "source": [
+    "- The operator $\\bigtriangledown f : L^2(\\cal{X}) \\rightarrow L^2(T\\cal{X})$ in the definition above is called the intrinsic gradient, and is similar to the classical notion of the gradient defining the direction of the steepest change of the function at a point, with the only difference that the direction is now a tangent vector."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a37b27c7-5cb6-4489-b3bc-12389b874b14",
+   "metadata": {},
+   "source": [
+    "- The Laplacian can be interpreted as the difference between the average of a function on an infinitesimal sphere around a point and the value of the function at the point itself.\n",
+    "    - 라플라시안은 point 주위의 극소구 상의 함수의 평균과 점 자체의 함수 값의 차이로 해석될 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee3ac487-fbe4-4100-aea6-31ada08be25e",
+   "metadata": {},
+   "source": [
+    "**Graphs and discrete differential operators**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39eff3c9-3181-4132-8909-da2ef97a4d5f",
+   "metadata": {},
+   "source": [
+    "- For simplicity, we will consider weighted undirected graphs, formally defined as a pair $(\\cal{V}, \\cal{E})$, where $\\cal{V} = \\{1; \\dots n\\}$ is the set of $n$ vertices, and $\\cal{E} \\subseteq \\cal{V} \\times \\cal{V}$ is the set of edges, where the graph being undirected implies that $(i, j) \\in \\cal{E}$ iff $(j, i) \\in \\cal{E}$.\n",
+    "- Furthermore, we associate a weight $a_i > 0$ with each vertex $i \\in \\cal{V}$, and a weight $w_{ij} \\ge 0$ with each edge $(i, j) \\in \\cal{E}$.\n",
+    "- Real functions $f : \\cal{V} \\rightarrow \\mathbb{R}$ and $F : \\cal{E} \\rightarrow \\mathbb{R}$ on the vertices and edges of the graph, respectively, are roughly the discrete analogy of continuous scalar and tangent vector fields in differential geometry.\n",
+    "- We can define Hilbert spaces $L^2(\\cal{V})$ and $L^2(\\cal{E})$ of such functions by specifying the respective inner products,\n",
+    "$$<f, g>_{L^2(\\cal{V})} = \\sum_{i\\in \\cal{V}} a_i f_i g_i ; \\text{ (20)}$$\n",
+    "$$<F, G>_{L^2(\\cal{E})} = \\sum_{i\\in \\cal{E}} w_{i,j} F_{i,j} G_{i,j} ; \\text{ (21)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d90b34c9-0bfc-4570-a372-ca159f2280b8",
+   "metadata": {},
+   "source": [
+    "- Let $f \\in L^2(\\cal{V})$ and $F \\in L^2(\\cal{E})$ be functions on the vertices and edges of the graphs, respectively.\n",
+    "- We can define differential operators acting on such functions analogously to differential operators on manifolds [72]. \n",
+    "- The graph gradient is an operator $\\bigtriangledown : L^2(\\cal{V}) \\rightarrow L^2(\\cal{E})$ mapping functions defined on vertices to functions defined on edges,\n",
+    "$$(\\bigtriangledown f)_{ij} = f_i - f_j , \\text{  (22)}$$\n",
+    "- automatically satisfying $(\\bigtriangledown f)_{ij} = (\\bigtriangledown f)_{ji}$.\n",
+    "- The graph divergence is an operator div : $L^2(\\cal{E}) \\rightarrow L^2(\\cal{V})$ doing the converse,\n",
+    "$$(div F )_i = \\frac{1}{a_i} \\sum_{j:(i,j)\\in \\cal{E}} w_{ij} F_{ij} \\text{  (23)}$$\n",
+    "- It is easy to verify that the two operators are adjoint w.r.t. the inner products (20)–(21), \n",
+    "$$ <F, \\bigtriangledown f> _{L^2(\\cal{E})} = <\\bigtriangledown * F, f>_{L^2(\\cal{V})} = |<-div F, f>_{L^2(\\cal{V})}\\text{  (24)}$$\n",
+    "- The graph Laplacian is an operator $\\bigtriangleup : L^2(\\cal{V}) \\rightarrow L^2(\\cal{V})$ defined as $\\bigtriangleup = -div \\bigtriangledown$. \n",
+    "- Combining definitions (22)–(23), it can be expressed in the familiar form\n",
+    "$$(\\bigtriangleup f)_i = \\frac{1}{a_i} \\sum_{(i,j)\\in \\cal{E}} w_{ij} (f_i - f_j) \\text{  (25)}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8fb5a14-c0d4-445d-995a-fb2568f6fd06",
+   "metadata": {},
+   "source": [
+    "- Note that formula (25) captures the intuitive geometric interpretation of the Laplacian as the difference between the local average of a function around a point and the value of the function at the point itself.\n",
+    "- Denoting by $W = (w_{ij})$ the $n \\times n$ matrix of edge weights (it is assumed that $w_{ij} = 0$ if $(i, j) \\notin \\cal{E})$, by $A = diag(a_1, \\dots , a_n)$ the diagonal matrix of vertex weights, and by $D = diag(\\sum_{j:j \\neq i} w_{ij} )$ the degree matrix, the graph Laplacian application to a function $f \\in L^2(\\cal{V})$ represented as a column vector $f = (f_1, \\dots ,f_n)^\\top$ can be written in matrixvector form as\n",
+    "$$\\bigtriangleup f = A^{-1} (D - W) f  \\text{  (26)}$$\n",
+    "- The choice of $A = I$ in (26) is referred to as the unnormalized graph Laplacian; another popular choice is $A = D$ producing the random walk Laplacian [73]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "643e449f-03ec-4887-99b0-2dab110b9605",
+   "metadata": {},
+   "source": [
+    "**Discrete manifolds**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44fbb917-13bd-42c2-9393-d01a7d570c62",
+   "id": "f7bf4810-bc22-4700-bc07-6fdaa28f9ce0",
    "metadata": {},
    "outputs": [],
    "source": []
