--- a/_notebooks/2022-03-09-bds_1주차.ipynb
+++ b/_notebooks/2022-03-09-bds_1주차.ipynb
@@ -677,7 +677,7 @@
     "\n",
     "$\\sum x_i y_i - ( \\bar{y} - \\beta_1 \\bar{x}) n \\bar{x} - \\beta_1 \\sum x_{i}^{2} = 0$\n",
     "\n",
-    "$\\leftrightarrow \\beta_1 (n(\\bar{x})^2 - \\sum x_{i}^{2}) + 2 x_i y_i - \\bar{y} n \\bar{x} = 0$\n",
+    "$\\leftrightarrow \\beta_1 (n(\\bar{x})^2 - \\sum x_{i}^{2}) + \\sum x_i y_i - \\bar{y} n \\bar{x} = 0$\n",
     "\n",
     "$\\beta_1 = \\frac{\\sum x_i y_i - n \\bar{x} \\bar{y}}{\\sum x_{i}^{2} - n (\\bar{x})^2} = \\frac{\\beta_1분자}{\\beta_1 분모}$\n",
     "\n",
