--- a/_notebooks/2022-03-12-Earthquake-real.ipynb
+++ b/_notebooks/2022-03-12-Earthquake-real.ipynb
@@ -538,7 +538,9 @@
   {
    "cell_type": "markdown",
    "id": "31d98bfe-278a-4a75-a053-f4685fd9ae0e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "##### 5. $W_{i,j}$ 행렬을 이용한 차수 행렬 정의\n",
     "- $D$ = Degree Matrix"
