--- a/_notebooks/2022-03-12-GNAR.ipynb
+++ b/_notebooks/2022-03-12-GNAR.ipynb
@@ -255,7 +255,7 @@
     "\n",
     "$X_{11}$ = 시점 1에 노드 A의 탑승객수, $X_{21}$ = 시점 1에 노드 B의 탑승객수, $X_{31}$ = 시점 1에 노드 C의 탑승객수, $X_{41}$ = 시점 1에 노드 D의 탑승객수, $\\dots$, $X_{it}$ = 시점 t에 노드 i의 탑승객수\n",
     "\n",
-    "$x_{it-1},x_{it-2}, \\dots , x_{it-p}$를 구하기 위해 $x_{it}$기 필요하지.\n",
+    "$x_{it-1},x_{it-2}, \\dots , x_{it-p}$를 구하기 위해 $x_{it}$가 필요하지.\n",
     "\n",
     "$x_{it-1},x_{it-2}, \\dots , x_{it-p}$에서 $i$ 근처 노드들도 필요하고."
    ]
