--- a/_notebooks/2022-03-13-Earthquake-real.ipynb
+++ b/_notebooks/2022-03-13-Earthquake-real.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 803,
+   "execution_count": 1427,
    "id": "f4cbc022-5d75-4201-9427-46a79ed76844",
    "metadata": {},
    "outputs": [],
@@ -413,6 +413,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6ad97d7-5b00-4523-9578-4953cef069bf",
+   "metadata": {},
+   "source": [
+    "**하버사인haversine 공식 사용**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c6e32e1-96e4-4efe-87c3-b24582a58fa3",
    "metadata": {},
    "source": [
@@ -680,9 +688,9 @@
    },
    "source": [
     "##### 8. 주성분 분석\n",
-    "- $compk = f @ np.outer(Ψ[:,k], Ψ[:,k]) $\n",
+    "- $comp_k = f @ np.outer(Ψ[:,k], Ψ[:,k]) $\n",
     "    - $k = 1, 2, 3, 8000$\n",
-    "- $p = \\sum_{1}^{n} comp1^2,\\sum_{1}^{n} comp2^2,…,\\sum_{1}^{n} compn^2$\n",
+    "- $p = \\sum_{1}^{n} comp_{1}^{2},\\sum_{1}^{n} comp_{2}^{2},…,\\sum_{1}^{n} comp_{n}^{2}$\n",
     "- $p = \\frac{p}{\\sum(p)}$"
    ]
   },
@@ -974,7 +982,7 @@
    "id": "7f994053-dfe8-4921-8d5e-9f96277198b7",
    "metadata": {},
    "source": [
-    "해본 거 중 별로\n",
+    "해본 거 중 별로 lst\n",
     "- 𝑑𝑖𝑠𝑡 를 이용한 𝜃 = 75, 𝜅 = 1000\n",
     "- ℎ𝑎𝑣𝑒𝑟𝑠𝑖𝑛𝑒 패키지를 이용한 𝜃 = 25000,𝜅 = 100000"
    ]
