--- a/_notebooks/2022-03-13-Earthquake_prac_3.ipynb
+++ b/_notebooks/2022-03-13-Earthquake_prac_3.ipynb
@@ -189,7 +189,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "8016c40c-f11f-4321-b105-977ed93da683",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
