--- a/_notebooks/2022-03-15-bds_2주차.ipynb
+++ b/_notebooks/2022-03-15-bds_2주차.ipynb
@@ -12,7 +12,7 @@
     "- badges: true\n",
     "- comments: false\n",
     "- author: 최서연\n",
-    "- categories: [Special Topics in Big Data Analysis, 정규방정식, 벡터 미분, 매트릭스 미분]"
+    "- categories: [Special Topics in Big Data Analysis, TensorFlow, TensorFlow NumPy]"
    ]
   },
   {
